fix: test align items

--- a/assets/css/common/profile-mode.css
+++ b/assets/css/common/profile-mode.css
@@ -4,7 +4,7 @@
     justify-content: center;
 }
 .main .profile {
-    align-items: center;
+    align-items: left;
 /*    min-height: calc(100vh  - (var(--gap) * 2));*/
 /*    min-height: calc(100vh - var(--header-height) - var(--footer-height) - (var(--gap) * 2));*/
     min-height: calc(100vh - var(--footer-height) - (var(--gap) * 2));
